--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-social-reddit"></i></span>
                         <h4><strong>Responsive</strong></h4>
                         <p class="text-faded mb-0">Looks great on any screen size!</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-diamond"></i></span>
                         <h4><strong>Redesigned</strong></h4>
                         <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
                     </div>
@@ -113,8 +113,9 @@
                 <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/theme/stylish-portfolio/">Download Now!</a>
             </div>
         </section>
+        
         <!-- Portfolio-->
-        <section class="content-section" id="portfolio">
+        <section class="content-section bg-success" id="portfolio">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Portfolio</h3>
