--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>pp - an introduction to ye mum</title>
+        <title>Tyler Lin's Website</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/gruface.ico" />
         <!-- Font Awesome icons (free version)-->
