--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a href="https://unsplash.com/">Unsplash</a>
                             !
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
+                        <a class="btn btn-dark btn-xl" href="#services">My Resume</a>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,8 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0">Services</h3>
-                    <h2 class="mb-5">What We Offer</h2>
+                    <h2 style="text-align: center;"class="mb-5">My Resume</h2>
+                    <h3 style="text-align: left;"class="mb-5">Lower School </h3>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
