--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <h3 class="text-secondary mb-0">Services</h3>
                     <h2 style="text-align: center;"class="mb-5">My Resume</h2>
                     <h3 style="text-align: left;"class="mb-5">Lower School </h3>
+                        <h3 style="text-align: left;"class="mb-5">Tae Kwon Doe </h3>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
