--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Anek+Malayalam&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Anek+Malayalam&family=Oswald:wght@200&display=swap" rel="stylesheet">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -60,9 +61,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0">Services</h3>
-                    <h2 style="text-align: center;"class="mb-5">My Resume</h2>
-                    <h3 style="text-align: left;"class="mb-5">Lower School </h3>
-                        <h3 style="text-align: left;"class="mb-5">Tae Kwon Doe </h3>
+                    <h2 style="text-align: center;font-family: 'Oswald', sans-serif;"class="mb-5">My Resume</h2>
+                    <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Lower School </h3>
+                        <h1 style="text-align: left; color: #33ab9b;"class="mb-5">Tae Kwon Doe </h1>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
