--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
                     <h3 class="text-secondary mb-0">Services</h3>
                     <h2 style="text-align: center;font-family: 'Oswald', sans-serif;"class="mb-5">My Resume</h2>
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Lower School </h3>
-                        <h1 style="text-align: left; color: #33ab9b;"class="mb-5">Tae Kwon Doe </h1>
+                        </ul>   
+                          <li>Tae Kwon Doe</li>
+                          <li>Tea</li>
+                          <li>Milk</li>
+                        </ul>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
