--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h3 class="text-secondary mb-0">Services</h3>
                     <h2 style="text-align: center;font-family: 'Oswald', sans-serif;"class="mb-5">My Resume</h2>
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Lower School </h3>
-                        </ul>   
+                        <ul style="text-align:left";>   
                           <li>Tae Kwon Doe</li>
                           <li>Tea</li>
                           <li>Milk</li>
