--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Lower School </h3>
                         <ul style="text-align:left";>   
                           <li>Tae Kwon Doe</li>
+                          <p>gjghoghighiojgijsdfjsjfldskjflsjflkjfjslfjfj
+                          jfjfijjfljfljfljfljlfjifjldfjdjfsdjfijfljf</p>
                           <li>Tea</li>
                           <li>Milk</li>
                         </ul>
