--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
                           <li>Tea</li>
                           <li>Milk</li>
                         </ul>
+                    <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Middle School </h3>
+                        <ul style="text-align:left";>   
+                          <li>Tae Kwon Doe</li>
+                          <p>gjghoghighiojgijsdfjsjfldskjflsjflkjfjslfjfj
+                          jfjfijjfljfljfljfljlfjifjldfjdjfsdjfijfljf</p>
+                          <li>Tea</li>
+                          <li>Milk</li>
+                        </ul>
+                    <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Upper School </h3>
+                        <ul style="text-align:left";>   
+                          <li>Tae Kwon Doe</li>
+                          <p>gjghoghighiojgijsdfjsjfldskjflsjflkjfjslfjfj
+                          jfjfijjfljfljfljfljlfjifjldfjdjfsdjfijfljf</p>
+                          <li>Tea</li>
+                          <li>Milk</li>
+                        </ul>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
