--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Lower School </h3>
                         <ul style="text-align:left";>   
                           <li>Tae Kwon Doe</li>
-                          <p>gjghoghighiojgijsdfjsjfldskjflsjflkjfjslfjfj
-                          jfjfijjfljfljfljfljlfjifjldfjdjfsdjfijfljf</p>
-                          <li>Tea</li>
-                          <li>Milk</li>
+                          <p>In Tae Kwon Doe, we'd do different activities depending on the day. Mondays, Wednesdays, and Fridays were all sparring, meaning we practiced fighting using what we learned from the other lessons. I started Tae Kwon Doe at six years old, and by 10 years old, as I was moving to Taiwan, they let me take the test for the first dan zeroith stripe black belt early, which is the first of 90. A fun little detail about Tae Kwon Doe is that in order to progress to the next belt, you'd need to memorize a Poomse, a sequence of moves that had the purpose of self defense. </p>
+                          <li>Tae Kwon Doe Tournaments</li>
+                          <p>In these tournaments, my peers were all split into groups of three, and then were tested on different things like breaking wood with kicks, punches, etc., or our form when doing kicks or punches. Because each category gave trophies to the students, me and my brother ended up with a lot of them, though most say second or third. I'd assume that it's because we were all children under the age of 10<p>
+                          <li>College Gate</li>
                         </ul>
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Middle School </h3>
                         <ul style="text-align:left";>   
-                          <li>Tae Kwon Doe</li>
-                          <p>gjghoghighiojgijsdfjsjfldskjflsjflkjfjslfjfj
-                          jfjfijjfljfljfljfljlfjifjldfjdjfsdjfijfljf</p>
-                          <li>Tea</li>
-                          <li>Milk</li>
+                          <li>College Academy</li>
+                          <p>This was similar to College Gate, but this time the courses were more advanced. Unlike the childish activities I had last time, basically in the summer of 4th grade, when I was in college GATE, I now had HTML website programming, animation, Magic the Gathering Trading Card Game class, and photoshopping</p>
+                          <li>Going to Tainan to help people with special needs</li>
+                          <li>Great Books Summer Camp</li>
+                          <li>This was a two weeks long summer camp hosted at Amherst, a college in Massachusetts. It took around an hour from my summer home (my house before moving to Taiwan). Being there gave me a feeling of what a college might be like: Activities among your peers, parties that have student made performances, and having dorm mates, giving me a little sneak peak to the college life. Of course, the primary reason I was there was because my 5th grade teacher recommended I go, so I went in the summer after 6th grade.</li>
                         </ul>
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Upper School </h3>
                         <ul style="text-align:left";>   
