--- a/index.html
+++ b/index.html
@@ -69,22 +69,29 @@
                           <li>Tae Kwon Doe Tournaments</li>
                           <p>In these tournaments, my peers were all split into groups of three, and then were tested on different things like breaking wood with kicks, punches, etc., or our form when doing kicks or punches. Because each category gave trophies to the students, me and my brother ended up with a lot of them, though most say second or third. I'd assume that it's because we were all children under the age of 10<p>
                           <li>College Gate</li>
+                          <p>This place</p>
                         </ul>
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Middle School </h3>
                         <ul style="text-align:left";>   
                           <li>College Academy</li>
                           <p>This was similar to College Gate, but this time the courses were more advanced. Unlike the childish activities I had last time, basically in the summer of 4th grade, when I was in college GATE, I now had HTML website programming, animation, Magic the Gathering Trading Card Game class, and photoshopping</p>
                           <li>Going to Tainan to help people with special needs</li>
+                          <p>I Don't remember much about what happened here, but I do remember that we did some stuff with special needs people down in Tainan. I do remember that this resulted from a family friend spring vacation to Tainan, and that this was on the itinerary, so it wasn't really at all planned by me. We walked around the special needs area, did a few activities with them, and more.</p>
                           <li>Great Books Summer Camp</li>
                           <li>This was a two weeks long summer camp hosted at Amherst, a college in Massachusetts. It took around an hour from my summer home (my house before moving to Taiwan). Being there gave me a feeling of what a college might be like: Activities among your peers, parties that have student made performances, and having dorm mates, giving me a little sneak peak to the college life. Of course, the primary reason I was there was because my 5th grade teacher recommended I go, so I went in the summer after 6th grade.</li>
                         </ul>
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Upper School </h3>
                         <ul style="text-align:left";>   
-                          <li>Tae Kwon Doe</li>
-                          <p>gjghoghighiojgijsdfjsjfldskjflsjflkjfjslfjfj
-                          jfjfijjfljfljfljfljlfjifjldfjdjfsdjfijfljf</p>
-                          <li>Tea</li>
-                          <li>Milk</li>
+                          <li>Started 3D modelling for fun</li>
+                          <p>When going into high school, since my dream is to make an incredible videogame in the future, I figured that taking a 3D modelling course would be necessary, causing me to take 3D Modelling and Character design, teaching me how to properly 3D model objects from furniture to organic beings, and even animation</p>
+                          <li>Founded the 3D Animation Club</li>
+                          <p>After taking the afformention course and its honors variant, I decided to host a new club regarding 3D modelling and 3D animation. Initially, I was going to make the club into something of a large group project, as I had recently been watching 3D CGI Meetup projects on youtube. However, as not many people showed up to the club, most likely due to the tremendous work at hand and the fact that the majority of us were in 11th grade, and therefore did not have the time to achieve something of said caliber. Overall, as I failed to get people to come, I revised the idea later on, instead focusing on mini projects and learning how to 3D animate rather than making a huge year long project. Unfortunately, by then, there were only 2 months of school remaining. This has truly been a good learning experience.</p>
+                          <li>Mental/Social Accomplishments</li>
+                          <li>Arlington Eats</li>
+                          <p>With senior year on the way, I felt pressured to do some community service/ volunteer work as I had embarrassingly done very little of that throughout my entire academic life. So I asked people I knew, including extended family, if they knew of a job I could work on. That led me to Arlington Eats, which basically involved us working on receiving requests from people in need and giving them different goods according to their needs. Of course, as the name suggests, these goods are all consumables/food. Also, what I just mentioned was only the "bag packing" job for the entire thing. We also had live shopping where we helped people select things to bring home whilst helping translate for those who didn't speak english, and helping the elderly shoppers with bringing heavy luggage up the stairs.</p>
+                          <li>Digital Design at Health Buy</li>
+                          <p>Similarly, back in eleventh grade, I felt that I was falling behind work-wise, and that I needed to put stuff on my resume. As always, because of my social anxiety, it was hard to ask anyone I didn't know if they had any recommendations. For context, Health Buy is an app created and run by my dad, and it just so happened that they wanted someone to create a little avatar for them (to incentivize using the app), similar to a virtual pet. So I utilized my photoshop skills to muster a few designs up. Unfortunately, someone else had already given a design before I did, but the effort is what counted.</p>
+                          <li></li>
                         </ul>
                 </div>
                 <div class="row gx-4 gx-lg-5">
