--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1"style = "font-family: 'Anek Malayalam', sans-serif;">The Website of SbAXeRo</h1>
+                <h1 class="mb-1"style = "font-family: 'Anek Malayalam', sans-serif;">SbAXeRo Genesis</h1>
                 <h3 class="mb-5"><em>Top 1 successful communist countries</em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">*hint, there are none</a>
             </div>
