--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1"style = "font-family: 'Anek Malayalam', sans-serif;">SbAXeRo Genesis</h1>
-                <h3 class="mb-5"><em>Top 1 successful communist countries</em></h3>
-                <a class="btn btn-primary btn-xl" href="#about">*hint, there are none</a>
+                <h3 class="mb-5"><em>The Website of Tyler Lin</em></h3>
+                <a class="btn btn-primary btn-xl" href="#about">The Beginnings</a>
             </div>
         </header>
         <!-- About-->
@@ -45,10 +45,11 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                        <h2>Mission Code SbAXeRo</h2>
                         <p class="lead mb-5">
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                            <a href="https://unsplash.com/">Unsplash</a>
+                           Create the greatest, most adrenaline inducing, and skill-based videogame that will revolutionize how people view games.
+                           <h3>My Youtube</h3>
+                            <a href=https://www.youtube.com/channel/UC7HUbplYI8n8w4siLdng_6Q/">Mega Monster UC</a>
                             !
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">My Resume</a>
@@ -60,8 +61,8 @@
         <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0">Services</h3>
-                    <h2 style="text-align: center;font-family: 'Oswald', sans-serif;"class="mb-5">My Resume</h2>
+                    <h3 class="text-secondary mb-0">Resume</h3>
+                    <h2 style="text-align: center;font-family: 'Oswald', sans-serif;"class="mb-5">Tyler Yu-Wei Lin</h2>
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Lower School </h3>
                         <ul style="text-align:left";>   
                           <li>Tae Kwon Doe</li>
