--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                     <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/TheFinalSymphonyV1I9.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -183,7 +183,7 @@
                                     <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/KarakeKakeEchoesOfTheCobaltStarAttempt2Phase2I3.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
