--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                             <a href=https://www.youtube.com/channel/UC7HUbplYI8n8w4siLdng_6Q/">Mega Monster UC</a>
                             !
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">My Resume</a>
                     </div>
                 </div>
             </div>
@@ -146,8 +145,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Stationary</div>
-                                    <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                                    <div class="h2">Image 1</div>
+                                    <p class="mb-0">A collection of a few of my old artworks!</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/ArtworksAssembleI2.jpg" alt="..." />
@@ -157,8 +156,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Ice Cream</div>
-                                    <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                                    <div class="h2">KarateKake but attempted to be drawn Hyperrealistic</div>
+                                    <p class="mb-0">You're gonna see this character a lot through my artworks</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/HyperrealisticKarateKakev4.jpg" alt="..." />
@@ -168,8 +167,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
-                                    <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                                    <div class="h2">My favorite piece, titled: The Final Symphony</div>
+                                    <p class="mb-0">Told Ya!</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/TheFinalSymphonyV1I9.jpg" alt="..." />
@@ -179,11 +178,11 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
-                                    <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                                    <div class="h2">Hand Hydra</div>
+                                    <p class="mb-0">Insipired by a doodle I made in onenote during class! XD</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/KarakeKakeEchoesOfTheCobaltStarAttempt2Phase2I3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/HandHydraAP2DArtPhase3I11.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
