--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-game-controller"></i></span>
                         <h4><strong>Responsive</strong></h4>
                         <p class="text-faded mb-0">Looks great on any screen size!</p>
                     </div>
