--- a/index.html
+++ b/index.html
@@ -109,26 +109,29 @@
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
                         <h4><strong>Cool</strong></h4>
                         <p class="text-faded mb-0">
-                            I'm an easygoing person
+                            I'm shy around others when I don't know them. If I know them I'm the opposite.
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
                         <h4><strong>Question</strong></h4>
-                        <p class="text-faded mb-0">I am a very handsome man...</p>
+                        <p class="text-faded mb-0">I aspire to be a CEO of my own games company</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Callout-->
         <section class="callout">
-            <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mx-auto mb-5">
-                    Welcome to
-                    <em>your</em>
-                    next website!
-                </h2>
-                <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/theme/stylish-portfolio/">Download Now!</a>
+            <div class="container px-4 px-lg-5 text-end">
+                <h5 class="my-0 mb-5">
+                    This is
+                    <em>my</em>
+                    artwork of mine so far!
+                </h5>
+                <p>
+                        <br>This piece depicts a few of my characters(more to be added <br>later), good and evil, fighting eachother in their final 
+                        <br>battle. And since it's their final battle, with everyone <br>there, I decided to call it the final symphony. This piece will<br>forever be a work in progress, with more and more<br>characters being added.<br>
+                    <p/>
             </div>
         </section>
         <!-- Portfolio-->
@@ -165,11 +168,11 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">My favorite piece, titled: The Final Symphony</div>
-                                    <p class="mb-0">Told Ya!</p>
+                                    <div class="h2">Another Piece I did on the character Karate Kake</div>
+                                    <p class="mb-0">He's using his ultimate attack: Echoes of the Cobalt Star</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/TheFinalSymphonyV1I9.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/KarateKakeEchoesOfTheCobaltStarAttempt2Phase2I2.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -194,7 +197,7 @@
                         <a class="social-link rounded-circle text-white" href="https://github.com/SbAXeRo"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
+                <p class="text-muted small mb-0">Copyright &copy; The Website of Tyler Lin 2022</p>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
