scale of the pop

--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
         const close = document.querySelector(".newclose");
         
         console.log(captions.length);
-        console.log(portfolios.length)
+        console.log(portfolios.length);
+        console.log(images.length);
 
         portfolios.forEach((portfolio) => {
             console.log(portfolio.children[1].src)
