--- a/index.html
+++ b/index.html
@@ -62,16 +62,19 @@
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0">Resume</h3>
                     <h2 style="text-align: center;font-family: 'Oswald', sans-serif;"class="mb-5">Tyler Yu-Wei Lin</h2>
-                    <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Lower School </h3>
+                    <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Work Experience </h3>
                         <ul style="text-align:left";>   
-                          <li>Tae Kwon Doe</li>
-                          <p>In Tae Kwon Doe, we'd do different activities depending on the day. Mondays, Wednesdays, and Fridays were all sparring, meaning we practiced fighting using what we learned from the other lessons. I started Tae Kwon Doe at six years old, and by 10 years old, as I was moving to Taiwan, they let me take the test for the first dan zeroith stripe black belt early, which is the first of 90. A fun little detail about Tae Kwon Doe is that in order to progress to the next belt, you'd need to memorize a Poomse, a sequence of moves that had the purpose of self defense. </p>
-                          <li>Tae Kwon Doe Tournaments</li>
-                          <p>In these tournaments, my peers were all split into groups of three, and then were tested on different things like breaking wood with kicks, punches, etc., or our form when doing kicks or punches. Because each category gave trophies to the students, me and my brother ended up with a lot of them, though most say second or third. I'd assume that it's because we were all children under the age of 10<p>
-                          <li>College Gate</li>
-                          <p>This place</p>
+                          <p>Lineage Technologies, Taipei, Taiwan — UI / UX 2-D Design Intern December 2020 - PRESENT </p>
+                          <li>For the HealthBuy App, I designed a series of avatars, like virtual pets, to increase user engagement </li>
+                          <li>Pitched these design ideas to the CEO and COO of the company</li>
+                          <p>Grand Si Ho Industrial Company Ltd, New Taipei, Taiwan — Intern December 2019 - January 2020, December 2020 - January 2021 <p>
+                          <li>Worked as a Plastic Injection machine operator performing deburring of injected products </li>
+                          <li>Performed Quality Control on products and educated fellow operators on quality standards </li>
+                          <p>Nova Education Learning Center, Taipei, Taiwan — TA August 2020 - May 2022 <p>
+                          <li>Was teaching assistant in the grade 3-5 coding class </li>
+                          <li>Helped students who had questions / problems with their in-class practice and checked their assignments </li>
                         </ul>
-                    <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Middle School </h3>
+                    <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Extracurricular Activities </h3>
                         <ul style="text-align:left";>   
                           <li>College Academy</li>
                           <p>This was similar to College Gate, but this time the courses were more advanced. Unlike the childish activities I had last time, basically in the summer of 4th grade, when I was in college GATE, I now had HTML website programming, animation, Magic the Gathering Trading Card Game class, and photoshopping</p>
