--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </ul>
                     <h3 style="text-align: left; font-family: 'Oswald', sans-serif;">Upper School </h3>
                         <ul style="text-align:left";>   
-                          <li>Started 3D modelling for fun</li>
+                          <li style="text-align: left; font-family: 'Oswald', sans-serif;">Started 3D modelling for fun</li>
                           <p>When going into high school, since my dream is to make an incredible videogame in the future, I figured that taking a 3D modelling course would be necessary, causing me to take 3D Modelling and Character design, teaching me how to properly 3D model objects from furniture to organic beings, and even animation</p>
                           <li>Founded the 3D Animation Club</li>
                           <p>After taking the afformention course and its honors variant, I decided to host a new club regarding 3D modelling and 3D animation. Initially, I was going to make the club into something of a large group project, as I had recently been watching 3D CGI Meetup projects on youtube. However, as not many people showed up to the club, most likely due to the tremendous work at hand and the fact that the majority of us were in 11th grade, and therefore did not have the time to achieve something of said caliber. Overall, as I failed to get people to come, I revised the idea later on, instead focusing on mini projects and learning how to 3D animate rather than making a huge year long project. Unfortunately, by then, there were only 2 months of school remaining. This has truly been a good learning experience.</p>
